--- a/chef-account-settings.html
+++ b/chef-account-settings.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ChefXChange About</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
 
     <link rel="stylesheet" href="js/slick/slick.css">
@@ -14,6 +15,7 @@
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script type="text/javascript" src="https//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 
     <script type="text/javascript" src="js/jquery.fancyform/fancyform.js"></script>
@@ -99,7 +101,7 @@
                 <div class="account-content-section">
                     <div class="section-head">Settings</div>
 
-                    <div class="inputs-container">
+                    <div class="inputs-container settings-phones">
                         <label>Contacts</label>
                         <div class="row visible">
                             <div class="col-lg-5 col-md-5 col-sm-12">
@@ -159,8 +161,8 @@
                     <div class="inputs-container cf">
                         <textarea class="cancelation-policy chefxchange-input no-margin-bottom" rows="3" placeholder="Canceletion policy"></textarea>
                     </div>
-                    
-                    <div class="inputs-container alot-inputs">
+
+                    <div class="inputs-container alot-inputs settings-payments">
                         <label>Payment Details</label>
                         <div class="row visible">
                             <div class="col-lg-6 col-md-6 col-sm-12">
@@ -189,7 +191,7 @@
 
                         <input type="text" placeholder="IBAN" class="chefxchange-input no-margin-bottom">
 
-                        <div class="row">
+                        <div class="row settings-bic-or-swift">
                             <div class="col-lg-6 col-md-6 col-sm-12">
                                 <input type="text" placeholder="BIC" class="chefxchange-input no-margin-bottom">
                             </div>
@@ -214,11 +216,11 @@
                 </div>
 
                 <div class="account-container-gray">
-                    <div class="col-lg-6 col-md-6 col-sm-12">
+                    <div class="col-lg-6 col-md-6 col-sm-12 width50">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                         Praesent eget malesuada eros.
                     </div>
-                    <div class="col-lg-6 col-md-6 col-sm-12 account-footer-button-container">
+                    <div class="col-lg-6 col-md-6 col-sm-12 width50 account-footer-button-container">
                         <a href="#" class="btn btn-red">Delete Account</a>
                     </div>
                 </div>
