--- a/chef-profile.html
+++ b/chef-profile.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ChefXChange About</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
 
     <link rel="stylesheet" href="js/slick/slick.css">
@@ -249,9 +250,72 @@
                             </li>
                         </ul>
                     </div>
-                    <div id="experience"></div>
-                    <div id="additional_info"></div>
-                    <div id="reviews"></div>
+                    <div id="experience" class="tab-pane">
+                        <p class="bigger a-bold indent-top">
+                            How did the chef learn how to cook ?
+                        </p>
+                        <p>Summary of where your cuisine is inspired from and how you go about expressing it. Food is my passion. Sharing that passion with others brings me joy.
+                            My cuisine is eclectic yet down home and comforting. I focus on gourmet comfort food with influences from the American South, Low Country and New Orleans Creole,
+                            the Caribbean, French and the West African cuisines of Senegal and Nigeria.<br>
+                            They call me Culinary Sith Lord, Gastro Sadist, Executive Chef and sometimes even by my name.<br>
+                        </p>
+                        <p class="bigger a-bold indent-top">
+                            Ranking
+                        </p>
+                        <p>Professional</p>
+                        <p class="bigger a-bold indent-top no-margin-bottom">
+                            Trainings
+                        </p>
+                        <div class="experience-workflow-item public">
+                            <div class="list-dot"></div>
+                            <p class="bigger"><strong class="experience_name">Lag culinary University Argentina</strong><br>
+                                <small><span class="position_held">Post Graduate</span> <i class="experience_date">(Aug 2008 - Aug 2009)</i></small></p>
+                            <p class="experience_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget malesuada eros. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+                        </div>
+                        <div class="experience-workflow-item public">
+                            <div class="list-dot"></div>
+                            <p class="bigger"><strong class="experience_name">Lag culinary University Argentina</strong><br>
+                                <small><span class="position_held">Post Graduate</span> <i class="experience_date">(Aug 2008 - Aug 2009)</i></small></p>
+                            <p class="experience_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget malesuada eros. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+                        </div>
+                        <p class="bigger a-bold indent-top no-margin-bottom">
+                            Work Experience
+                        </p>
+                        <div class="experience-workflow-item public">
+                            <div class="list-dot"></div>
+                            <p class="bigger"><strong class="experience_name">Lag culinary University Argentina</strong><br>
+                                <small><span class="position_held">Post Graduate</span> <i class="experience_date">(Aug 2008 - Aug 2009)</i></small></p>
+                            <p class="experience_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget malesuada eros. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+                        </div>
+                        <div class="experience-workflow-item public">
+                            <div class="list-dot"></div>
+                            <p class="bigger"><strong class="experience_name">Lag culinary University Argentina</strong><br>
+                                <small><span class="position_held">Post Graduate</span> <i class="experience_date">(Aug 2008 - Aug 2009)</i></small></p>
+                            <p class="experience_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget malesuada eros. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+                        </div>
+                    </div>
+                    <div id="additional_info" class="tab-pane">
+                        <p class="bigger a-bold indent-top">
+                            Location
+                        </p>
+                        <p>Washington, DC, United States<br>
+                            Travell: 20km
+                        </p>
+                        <p class="bigger a-bold indent-top">
+                            Language Spoken
+                        </p>
+                        <p>Washington, DC, United States<br>
+                            English, Russian
+                        </p>
+                        <p class="bigger a-bold indent-top">
+                            Cancelation Policy
+                        </p>
+                        <p>No description provide
+                        </p>
+                    </div>
+                    <div id="reviews" class="tab-pane">
+
+                    </div>
                 </div>
             </div>
         </section>
