--- a/chef_account-add-menu.html
+++ b/chef_account-add-menu.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ChefXChange About</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
 
     <link rel="stylesheet" href="js/slick/slick.css">
@@ -100,7 +101,7 @@
                 <div class="account-content-section">
                     <div class="section-head">Add menu</div>
 
-                    <div class="row inputs-container o-visible">
+                    <div class="row inputs-container o-visible add-menu-options-container">
                         <div class="col-lg-6 col-md-6 col-sm-12 menu-inputs-margin-bottom">
                             <label>Style of Service</label>
                             <select class="fancySelect">
@@ -120,14 +121,14 @@
                         <div class="col-xs-12">
                             <input type="text" class="chefxchange-input inputs-seria" placeholder="Menu title">
                         </div>
-                        <div class="col-lg-6 col-md-6 col-sm-12">
+                        <div class="col-lg-6 col-md-6 col-sm-12 width50">
                             <textarea name="" class="chefxchange-input simple-textarea" placeholder="Description"></textarea>
                         </div>
-                        <div class="col-lg-6 col-md-6 col-sm-12">
+                        <div class="col-lg-6 col-md-6 col-sm-12 width50">
                             <div class="image-menu-container">
-                                <img src="img/photo-for-menu.jpg" alt="">
-                                <input type="file" class="hidden chef-menu-file-input">
+                                <img src="img/photo-for-menu.jpg" alt="" class="replaced-image">
                             </div>
+                            <input type="file" class="hidden chef-menu-file-input">
                         </div>
 
                     </div>
@@ -142,14 +143,14 @@
                                 <label></label>
                                 <input type="text" class="chefxchange-input inputs-seria" placeholder="Cuorce title">
                             </div>
-                            <div class="col-lg-6 col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-6 col-sm-12 width50">
                                 <textarea name="" class="chefxchange-input simple-textarea" placeholder="Description"></textarea>
                             </div>
-                            <div class="col-lg-6 col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-6 col-sm-12 width50">
                                 <div class="image-menu-container">
-                                    <img src="img/photo-for-menu.jpg" alt="" class="trigger-element">
-                                    <input type="file" class="hidden chef-menu-file-input">
+                                    <img src="img/photo-for-menu.jpg" alt="" class="replaced-image">
                                 </div>
+                                <input type="file" class="hidden chef-menu-file-input">
                             </div>
                         </div>
                         <div class="add-cources-item row inputs-section">
@@ -157,14 +158,14 @@
                                 <label>Cource 1</label>
                                 <input type="text" class="chefxchange-input inputs-seria" placeholder="Cuorce title">
                             </div>
-                            <div class="col-lg-6 col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-6 col-sm-12 width50">
                                 <textarea name="" class="chefxchange-input simple-textarea" placeholder="Description"></textarea>
                             </div>
-                            <div class="col-lg-6 col-md-6 col-sm-12">
+                            <div class="col-lg-6 col-md-6 col-sm-12 width50">
                                 <div class="image-menu-container">
-                                    <img src="img/photo-for-menu.jpg" alt="">
-                                    <input type="file" class="hidden chef-menu-file-input">
+                                    <img src="img/photo-for-menu.jpg" alt="" class="replaced-image">
                                 </div>
+                                <input type="file" class="hidden chef-menu-file-input">
                             </div>
                         </div>
                     </div>
@@ -173,7 +174,7 @@
                         How much would you charge for the menu ?
                     </div>
                     <small class="pricesssss">Include ingredients price (not counting hourly fee for prepearing, serving, and cleaning at host place)</small>
-                    <div class="inputs-container row">
+                    <div class="inputs-container row prising">
                         <div class="col-lg-6 col-md-6 col-sm-12">
                             <label>Minimum</label>
                             <input type="text" class="chefxchange-input with-bg person inputs-seria" placeholder="12">
