--- a/contacts.html
+++ b/contacts.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ChefXChange About</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
 
     <link rel="stylesheet" href="js/slick/slick.css">
@@ -69,7 +70,7 @@
             <div class="addresses">
                 <h2>Addresses</h2>
                 <ul class="addresses-list row">
-                    <li class="addresses-item col-lg-4 col-md-4 col-sm-1">
+                    <li class="addresses-item col-lg-4 col-md-4 col-sm-12">
                         <p class="bigger"><strong>ChefXChange Ireland registered address</strong></p>
                         <p>Registery #: 552714<br>
                             The Black Church<br>
@@ -77,7 +78,7 @@
                             Dublin 7<br>
                             Ireland</p>
                     </li>
-                    <li class="addresses-item col-lg-4 col-md-4 col-sm-1">
+                    <li class="addresses-item col-lg-4 col-md-4 col-sm-12">
                         <p class="bigger"><strong>ChefXChange limited registered address</strong></p>
                         <p>Registery #: 1824876<br>
                             Mill Mall, Suite 6<br>
@@ -86,7 +87,7 @@
                             Road Town, Tortola<br>
                             British Virgin Islands</p>
                     </li>
-                    <li class="addresses-item col-lg-4 col-md-4 col-sm-1">
+                    <li class="addresses-item col-lg-4 col-md-4 col-sm-12">
                         <p class="bigger"><strong>ChefXChange FZE<br>
                             registered address</strong></p>
                         <p>PO Box 341058<br>
