--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ChefXChange Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
 
     <link rel="stylesheet" href="js/slick/slick.css">
@@ -81,7 +82,7 @@
                 <h2 class="featured-home-chefs-title a-bold">Featured Chefs</h2>
 
                 <div class="row">
-                    <div class="col-lg-offset-1 col-lg-3 col-sm-offset-1 col-sm-5 col-md-offset-2 col-md-4">
+                    <div class="col-lg-offset-1 col-lg-3 col-sm-offset-0 col-sm-6 col-md-offset-2 col-md-4">
                         <div class="featured-chef-item">
                             <div class="featured-chef-head-image">
                                 <img src="images/chef-header-img-1.jpg" alt="">
@@ -117,7 +118,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-offset-1 col-lg-3 col-sm-offset-1 col-sm-5 col-md-offset-2 col-md-4">
+                    <div class="col-lg-offset-1 col-lg-3 col-sm-offset-0 col-sm-6 col-md-offset-2 col-md-4">
                         <div class="featured-chef-item">
                             <div class="featured-chef-head-image">
                                 <img src="images/chef-header-img-2.jpg" alt="">
@@ -153,7 +154,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-offset-1 col-lg-3 col-sm-offset-1 col-sm-5 col-md-offset-2 col-md-4">
+                    <div class="col-lg-offset-1 col-lg-3 col-sm-offset-0 col-sm-6  col-md-offset-2 col-md-4">
                         <div class="featured-chef-item">
                             <div class="featured-chef-head-image">
                                 <img src="images/chef-header-img-3.jpg" alt="">
