--- a/invite-friends.html
+++ b/invite-friends.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ChefXChange About</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
 
     <link rel="stylesheet" href="js/slick/slick.css">
@@ -66,7 +67,7 @@
                     <button class="btn btn-orange invite-friends-button">Send</button>
                 </div>
             </div>
-            <div class="row inputs-container">
+            <div class="row inputs-container row-margin">
                 <div class="col-lg-8 col-md-8 col-sm-12">
                     <input type="text" class="chefxchange-input" value="http://www.chefxchange.com" readonly placeholder="http://www.chefxchange.com">
                 </div>
@@ -75,7 +76,7 @@
                     <a href="#" class="btn btn-blue share twitter"><span class="icon twitter-small-white"></span> Share on <span class="new-line">Twitter</span></a>
                 </div>
             </div>
-            <div>
+            <div class="row-margin">
                 <a href="#" class="btn btn-orange">Your Coupons</a>
             </div>
 
