--- a/search-result.html
+++ b/search-result.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ChefXChange Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
 
     <link rel="stylesheet" href="js/slick/slick.css">
@@ -49,7 +50,7 @@
 
         <section class="search-options">
             <div class="row search-orange-line">
-                <div class="col-lg-4 col-md-4 col-sm-12">
+                <div class="col-lg-4 col-md-4 col-sm-6">
                     I'm looking for a
                     <select class="fancySelect">
                         <option value="1" selected>Meditarrainian</option>
@@ -57,7 +58,7 @@
                         <option value="1">2</option>
                     </select>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-12">
+                <div class="col-lg-4 col-md-4 col-sm-6">
                     cuisine chef in
                     <select class="fancySelect">
                         <option value="1" selected>Dubai</option>
@@ -87,7 +88,7 @@
                         <input type="hidden" id="ranking_value_at_search">
                     </div>
                 </div>
-                <div class="col-lg-2 col-md-2 col-sm-6 text-center">
+                <div class="col-lg-2 col-md-2 col-sm-3 text-center">
                     <div class="search-option-title">Currency:</div>
                     <select class="fancySelect">
                         <option value="1">USD</option>
@@ -95,7 +96,7 @@
                         <option value="1">RUR</option>
                     </select>
                 </div>
-                <div class="col-lg-3 col-md-3 col-sm-6">
+                <div class="col-lg-3 col-md-3 col-sm-4">
                     <div class="search-option-title">
                         Price:
                         <span class="price-view">
@@ -105,7 +106,7 @@
                     </div>
                     <div id="search-price-slider"></div>
                 </div>
-                <div class="col-lg-2 col-md-2 col-sm-12">
+                <div class="col-lg-2 col-md-2 col-sm-12 search-filter-buttons">
                     <a href="#" class="btn btn-white search-buttons">Clear Filters</a>
                     <a href="#" class="btn btn-orange search-buttons">More filters</a>
                 </div>
