--- a/chef_account-menu.html
+++ b/chef_account-menu.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>ChefXChange About</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
 
     <link rel="stylesheet" href="js/slick/slick.css">
