--- a/terms-and-privacy.html
+++ b/terms-and-privacy.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>ChefXChange About</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
 
     <link rel="stylesheet" href="js/slick/slick.css">
     <link rel="stylesheet" href="js/slick/slick-theme.css">
 
     <link rel="stylesheet/less" type="text/css" href="css/global.less">
-
 
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
 
@@ -111,10 +111,10 @@
 
         <footer class="footer">
             <div class="row footer-top-line">
-                <div class="col-lg-4 col-md-4 col-sm-6 chefxchange-copyrights">
+                <div class="col-lg-4 col-md-4 col-sm-12 chefxchange-copyrights">
                     <a href="/" class="a-regular">© 2015 ChefXChange</a>
                 </div>
-                <div class="col-lg-8 col-md-8 col-sm-6">
+                <div class="col-lg-8 col-md-8 col-sm-12">
                     <nav class="footer-menu a-bold">
                         <a href="#" class="footer-menu-item">About us</a>
                         <a href="#" class="footer-menu-item">FAQ</a>
